--- a/test-output/index.html
+++ b/test-output/index.html
@@ -29,15 +29,15 @@
     <div class="navigator-root">
       <div class="navigator-suite-header">
         <span>All suites</span>
-        <a href="#" class="collapse-all-link" title="Collapse/expand all the suites">
-          <img class="collapse-all-icon" src="collapseall.gif">
+        <a href="#" title="Collapse/expand all the suites" class="collapse-all-link">
+          <img src="collapseall.gif" class="collapse-all-icon">
           </img> <!-- collapse-all-icon -->
         </a> <!-- collapse-all-link -->
       </div> <!-- navigator-suite-header -->
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-Suite">
+            <a href="#" panel-name="suite-Suite" class="navigator-link">
               <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\truon\eclipse-workspace\Karros-Tech\testng.xml</span>
+                  <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
+                    <span>testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-Suite">
+                  <a href="#" panel-name="testlist-Suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-Suite">
+                  <a href="#" panel-name="group-Suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-Suite">
+                  <a href="#" panel-name="times-Suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-Suite">
+                  <a href="#" panel-name="reporter-Suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-Suite">
+                  <a href="#" panel-name="ignored-methods-Suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-Suite">
+                  <a href="#" panel-name="chronological-Suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -101,8 +101,8 @@
                     </span>
                     <div class="method-list-content failed suite-Suite">
                       <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.Filters.TC_Request_Status" hash-for-method="TO_Request_Status">TO_Request_Status</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.Filters.TC_Request_Status" class="method navigator-link" hash-for-method="TO_Request_Status">TO_Request_Status</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Suite -->
@@ -115,38 +115,38 @@
                     </span>
                     <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" hash-for-method="TO_API_001">TO_API_001</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" class="method navigator-link" hash-for-method="TO_API_001">TO_API_001</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" hash-for-method="TO_API_002">TO_API_002</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" class="method navigator-link" hash-for-method="TO_API_002">TO_API_002</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" hash-for-method="TO_API_003">TO_API_003</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" class="method navigator-link" hash-for-method="TO_API_003">TO_API_003</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" hash-for-method="TO_API_004">TO_API_004</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" class="method navigator-link" hash-for-method="TO_API_004">TO_API_004</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" hash-for-method="TO_API_005">TO_API_005</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" class="method navigator-link" hash-for-method="TO_API_005">TO_API_005</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" hash-for-method="TO_API_006">TO_API_006</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.API.TC_PostAPI" class="method navigator-link" hash-for-method="TO_API_006">TO_API_006</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name" hash-for-method="TO_Sort_First_Name">TO_Sort_First_Name</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name" class="method navigator-link" hash-for-method="TO_Sort_First_Name">TO_Sort_First_Name</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -174,28 +174,13 @@
                   <span class="method-name">TO_Request_Status</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [3] but found [9]
 	at KarrosTechPJ.Karros.Filters.TC_Request_Status.TO_Request_Status(TC_Request_Status.java:64)
-	at java.util.ArrayList.forEach(ArrayList.java:1249)
-... Removed 33 stack frames
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1510)
+... Removed 32 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-failed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="TO_Sort_First_Name">
-                  </a> <!-- TO_Sort_First_Name -->
-                  <span class="method-name">TO_Sort_First_Name</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -246,16 +231,31 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="TO_Sort_First_Name">
+                  </a> <!-- TO_Sort_First_Name -->
+                  <span class="method-name">TO_Sort_First_Name</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\truon\eclipse-workspace\Karros-Tech\testng.xml</span>
+            <span class="header-content">/Users/khuongtruong/Documents/GitHub/Karros/testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
+&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name&quot;/&gt;
@@ -304,35 +304,35 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TO_Sort_First_Name')
 data.setCell(0, 2, 'KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name')
-data.setCell(0, 3, 46878);
+data.setCell(0, 3, 41887);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TO_API_006')
 data.setCell(1, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
-data.setCell(1, 3, 30474);
+data.setCell(1, 3, 26724);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'TO_API_003')
 data.setCell(2, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
-data.setCell(2, 3, 8235);
+data.setCell(2, 3, 6964);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'TO_Request_Status')
-data.setCell(3, 2, 'KarrosTechPJ.Karros.Filters.TC_Request_Status')
-data.setCell(3, 3, 5533);
+data.setCell(3, 1, 'TO_API_004')
+data.setCell(3, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
+data.setCell(3, 3, 5319);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'TO_API_001')
 data.setCell(4, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
-data.setCell(4, 3, 5108);
+data.setCell(4, 3, 4582);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'TO_API_004')
-data.setCell(5, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
-data.setCell(5, 3, 2643);
+data.setCell(5, 1, 'TO_Request_Status')
+data.setCell(5, 2, 'KarrosTechPJ.Karros.Filters.TC_Request_Status')
+data.setCell(5, 3, 4558);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'TO_API_002')
 data.setCell(6, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
-data.setCell(6, 3, 2239);
+data.setCell(6, 3, 3274);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'TO_API_005')
 data.setCell(7, 2, 'KarrosTechPJ.Karros.API.TC_PostAPI')
-data.setCell(7, 3, 2098);
+data.setCell(7, 3, 1737);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -370,79 +370,79 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_Sort_First_Name</span>
-                <span class="method-start">14885 ms</span>
+                <span class="method-start">10438 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">61767 ms</span>
+                <span class="method-start">52328 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">KarrosTechPJ.Karros.Filters.TC_Request_Status</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">62407 ms</span>
+                <span class="method-start">52415 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">TO_Request_Status</span>
-                <span class="method-start">76665 ms</span>
+                <span class="method-start">62212 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">82206 ms</span>
+                <span class="method-start">66772 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">KarrosTechPJ.Karros.API.TC_PostAPI</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">82832 ms</span>
+                <span class="method-start">66856 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_API_001</span>
-                <span class="method-start">82832 ms</span>
+                <span class="method-start">66857 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">87943 ms</span>
+                <span class="method-start">71441 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_API_002</span>
-                <span class="method-start">87944 ms</span>
+                <span class="method-start">71441 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">90188 ms</span>
+                <span class="method-start">74716 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_API_003</span>
-                <span class="method-start">90189 ms</span>
+                <span class="method-start">74716 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">98426 ms</span>
+                <span class="method-start">81682 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_API_004</span>
-                <span class="method-start">98427 ms</span>
+                <span class="method-start">81682 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">101073 ms</span>
+                <span class="method-start">87003 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_API_005</span>
-                <span class="method-start">101074 ms</span>
+                <span class="method-start">87003 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">103175 ms</span>
+                <span class="method-start">88742 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">TO_API_006</span>
-                <span class="method-start">103175 ms</span>
+                <span class="method-start">88742 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
