--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_001()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_001</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:45</td>   <td>5112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_002()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_002</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:47</td>   <td>7357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_003()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_003</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:56</td>   <td>15595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_004()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_004</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:58</td>   <td>18242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_005()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_005</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:15:00</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_006()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_006</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 10:14:34</td>   <td>-6167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2f943d71]">TO_Request_Status</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 10:13:32</td>   <td>-67947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_First_Name.TO_Sort_First_Name()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">TO_Sort_First_Name</td> 
-  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 10:14:19</td>   <td>-21065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_First_Name.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 10:14:39</td>   <td>-625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2f943d71]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 10:13:17</td>   <td>-82831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_First_Name.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 10:14:20</td>   <td>-20425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2f943d71]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:45</td>   <td>5112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:47</td>   <td>7357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:56</td>   <td>15595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:14:58</td>   <td>18242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 10:15:00</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_001()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">TO_API_001</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:28</td>   <td>4584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_002()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">TO_API_002</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:31</td>   <td>7859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_003()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">TO_API_003</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:38</td>   <td>14825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_004()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">TO_API_004</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:43</td>   <td>20146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_005()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">TO_API_005</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:45</td>   <td>21885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_006()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">TO_API_006</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="b0d1b6">  <td>20/04/26 10:44:18</td>   <td>-4645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2805c96b]">TO_Request_Status</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="9ad2e3">  <td>20/04/26 10:43:27</td>   <td>-56419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_First_Name.TO_Sort_First_Name()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@4fe767f3]">TO_Sort_First_Name</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="9ad2e3">  <td>20/04/26 10:44:08</td>   <td>-14528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_First_Name.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@4fe767f3]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="b0d1b6">  <td>20/04/26 10:44:23</td>   <td>-85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2805c96b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="9ad2e3">  <td>20/04/26 10:43:16</td>   <td>-66856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_First_Name.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@4fe767f3]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="b0d1b6">  <td>20/04/26 10:44:09</td>   <td>-14442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2805c96b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:28</td>   <td>4584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:31</td>   <td>7859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:38</td>   <td>14825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:43</td>   <td>20146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/26 10:44:45</td>   <td>21885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@184cf7cf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
 </table>
